[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# url->服务
axum = { version = "0.5.16" }
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.4.13" }
hyper = { version = "0.14.20" }
# 序列化
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86" }
# 数据库
sqlx = { version = "0.6", features = [
  "runtime-async-std-native-tls",
  "mysql",
  "macros",
  "chrono",
  "uuid",
] }
