[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# 静态初始化变量
lazy_static = { version = "1.4" }
# url->服务
axum = { version = "0.6.1" }
tokio = { version = "1.21.2", features = ["full"] }
tower = { version = "0.4.13" }
hyper = { version = "0.14.20" }
# 序列化
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86" }
rbs = { version = "0.1" }
rbatis = { version = "4.0" }
# 日志
log = "0.4"
fast_log = "1.5"
# 数据库驱动
rbdc-mysql = { version = "0.1.17" }
rbdc-pg = { version = "0.1.20" }
